--- a/provision/playbook.yml
+++ b/provision/playbook.yml
@@ -1,6 +1,9 @@
 ---
 - hosts: all
   become: yes
+  vars:
+    project_name: tilr
+    project_dir: /home/vagrant/{{project_name}}
   roles:
   - { role: azavea.postgresql }  
   - { role: azavea.postgis }  
@@ -11,6 +14,13 @@
     apt: name=git state=present
   - name: install osm2pgsql
     apt: name=osm2pgsql state=present
+
+  # data
   - name: "get vector datasource"
     become_user: vagrant
     git: repo=https://github.com/mapzen/vector-datasource force=yes update=yes dest=~/vector-datasource accept_hostkey=True
+  
+  - name: download new york pbf-file
+    become_user: vagrant
+    get_url: https://s3.amazonaws.com/metro-extracts.mapzen.com/new-york_new-york.osm.pbf
+     dest={{ project_dir }}/new-york_new-york.pbf
