--- a/provision/playbook.yml
+++ b/provision/playbook.yml
@@ -18,4 +18,7 @@
   # data
   - name: "get vector datasource"
     become_user: vagrant
-    git: repo=https://github.com/mapzen/vector-datasource force=yes update=yes dest=~/vector-datasource accept_hostkey=True
+    git: repo=https://github.com/mapzen/vector-datasource force=yes update=yes dest={{project_dir}}/vector-datasource accept_hostkey=True
+  - name: download new york pbf-file
+    become_user: vagrant
+    get_url:  url=https://s3.amazonaws.com/metro-extracts.mapzen.com/new-york_new-york.osm.pbf dest={{ project_dir }}/new-york_new-york.pbf
