--- a/provision/playbook.yml
+++ b/provision/playbook.yml
@@ -3,6 +3,7 @@
   become: yes
   vars:
     project_name: tilr
+    db_name: osm
     project_dir: /home/vagrant/{{project_name}}
   roles:
   - { role: azavea.postgresql }  
@@ -16,9 +17,29 @@
     apt: name=osm2pgsql state=present
 
   # data
-  - name: "get vector datasource"
+  - name: Get vector datasource
     become_user: vagrant
     git: repo=https://github.com/mapzen/vector-datasource force=yes update=yes dest={{project_dir}}/vector-datasource accept_hostkey=True
-  - name: download new york pbf-file
+  - name: Download new york pbf-file
     become_user: vagrant
     get_url:  url=https://s3.amazonaws.com/metro-extracts.mapzen.com/new-york_new-york.osm.pbf dest={{ project_dir }}/new-york_new-york.pbf
+  
+  - name: Ensure PostgreSQL database exists
+    become_user: postgres
+    postgresql_db: name={{ db_name }} 
+      encoding='UTF-8' 
+      lc_collate='en_US.UTF-8' 
+      lc_ctype='en_US.UTF-8' 
+      template='template0' 
+      state=present
+
+  # - name: Ensure user has access to the database 
+  #   sudo_user: postgres 
+  #   postgresql_user: db={{ db_name }} 
+  #     name={{ db_user }} 
+  #     password={{ db_password }} 
+  #     priv=ALL state=present
+  # - name: Ensure PostGIS is installed
+  #   postgresql_ext: 
+
+  # - name: Ensure hstore is installed
