--- a/provision/playbook.yml
+++ b/provision/playbook.yml
@@ -26,7 +26,10 @@
   
   - name: install pip
     apt: name=python-pip state=present
-    
+
+  - name: install python-dev
+    apt: name=python-dev state=present
+
   - name: install psycopg2
     pip: name=psycopg2
 
