--- a/provision/playbook.yml
+++ b/provision/playbook.yml
@@ -92,7 +92,7 @@
     become_user: {{ sudo_postgres }}
     shell: {{project_dir}}/vector-datasource/add-external-data.sh
     args:
-      d={{ db_name }}
+      d: {{ db_name }}
   
   # - name: Load data to PostGIS
   #   become_user: {{ sudo_postgres }}
