--- a/provision/playbook.yml
+++ b/provision/playbook.yml
@@ -90,7 +90,7 @@
 
   - name: Load data to PostGIS
     become_user: {{ sudo_postgres }}
-    shell: {{project_dir}}/vector-datasource/add-external-data.sh
+    shell: {{project_dir}}/vector-datasource/add-external-data.sh >> {{project_dir}}/log.txt
   
   # - name: Load data to PostGIS
   #   become_user: {{ sudo_postgres }}
