--- a/provision/playbook.yml
+++ b/provision/playbook.yml
@@ -6,7 +6,6 @@
     project_name: tilr
     db_name: osm
     project_dir: /home/vagrant/{{project_name}}
-    sudo_postgres: postgres
   
   roles:
   - { role: azavea.postgresql }  
@@ -32,7 +31,7 @@
 
   # setup database + extensions required
   - name: Ensure PostgreSQL database exists
-    become_user: {{ sudo_postgres }}
+    become_user: postgres
     postgresql_db: name={{ db_name }} 
       encoding='UTF-8' 
       lc_collate='en_US.UTF-8' 
@@ -41,11 +40,11 @@
       state=present
 
   - name: Ensure PostGIS is installed in db
-    become_user: {{ sudo_postgres }}
+    become_user: postgres
     postgresql_ext: name=postgis db={{ db_name }}
 
   - name: Ensure hstore is installed
-    become_user: {{ sudo_postgres }}
+    become_user: postgres
     postgresql_ext: name=hstore db={{ db_name }}
 
   - name: Install dev dependencies for mapzen
@@ -81,5 +80,16 @@
   - name: Get the Mapzen tileserver
     become_user: vagrant
     git: repo=https://github.com/mapzen/tileserver   force=yes update=yes dest={{project_dir}}/tileserver accept_hostkey=True
+  
+  - name: dateutil requirement that needs to fullfilled prior to requirements.txt install
+    pip: name=python-dateutil
+
   - name: Install requirements
     pip: requirements={{project_dir}}/tileserver/requirements.txt
+
+  # - name: Load data to PostGIS
+  #   shell: {{project_dir}}/vector-datasource/add-external-data.sh -d osm 
+  # - name: Load data to PostGIS
+  #   shell: {{project_dir}}/vector-datasource/add-external-data.sh -d osm 
+  # - name: Perform updates
+  #   shell: {{project_dir}}/vector-datasource/perform-sql-updates.sh -d osm 
