--- a/provision/playbook.yml
+++ b/provision/playbook.yml
@@ -6,6 +6,7 @@
     project_name: tilr
     db_name: osm
     project_dir: /home/vagrant/{{project_name}}
+    sudo_postgres: "postgres"
   
   roles:
   - { role: azavea.postgresql }  
@@ -31,7 +32,7 @@
 
   # setup database + extensions required
   - name: Ensure PostgreSQL database exists
-    become_user: postgres
+    become_user: {{sudo_postgres}}
     postgresql_db: name={{ db_name }} 
       encoding='UTF-8' 
       lc_collate='en_US.UTF-8' 
@@ -40,11 +41,11 @@
       state=present
 
   - name: Ensure PostGIS is installed in db
-    become_user: postgres
+    become_user: {{sudo_postgres}}
     postgresql_ext: name=postgis db={{ db_name }}
 
   - name: Ensure hstore is installed
-    become_user: postgres
+    become_user: {{sudo_postgres}}
     postgresql_ext: name=hstore db={{ db_name }}
 
   - name: Install dev dependencies for mapzen
