--- a/provision/playbook.yml
+++ b/provision/playbook.yml
@@ -87,7 +87,7 @@
 
   - name: Load data to PostGIS
     become_user: postgres
-    shell: {{ project_dir }}/vector-datasource/dataadd-external-data.sh -d osm
+    shell: /home/vagrant/tilr/vector-datasource/dataadd-external-data.sh -d osm
     # args: 
     #   # chdir: {{ project_dir }}/vector-datasource/data
     #   chdir: /home/vagrant/tilr/vector-datasource/data
