--- a/provision/playbook.yml
+++ b/provision/playbook.yml
@@ -12,7 +12,7 @@
   # - { role: azavea.postgresql }  
   # - { role: azavea.postgis }  
 
-  # tasks: 
+  tasks: 
   # - name: apt get update
   #   apt: update_cache=yes
   # - name: install git
